--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Olá</h1>
+    <nav>
+        <a href="https://github.com/ViniOliver01"><img src="./assets/logotipo-do-github.svg" alt=""></a>
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">TOOLS</a></li>
+            <li><a href="">PROJECTS</a></li>
+            <li><a href="">CONTACT</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <div class="Profile">
+            <img src="https://github.com/ViniOliver01.png" alt="">
+            <div class="ProfileInfo">
+                <h2>Vinicius Oliveira</h2>
+                <h3>Full-Stack Developer</h3>
+                <h4>Iperó - SP</h4>
+            </div>
+        </div>
+        <h1>Código para vida</h1>
+        <div class="buttons">
+            <Button>Confira meus projetos</Button>
+            <Button>Entre em contato</Button>
+        </div>
+        <img id="arrow"src="./assets/arrow.svg" alt="">
+        </main>
 </body>
 </html>
