add tools page and refactor navigation

--- a/index.html
+++ b/index.html
@@ -40,14 +40,38 @@
                 <a href="#projects"><Button >Confira meus projetos</Button></a>
                 <a href="#contact"><Button >Entre em contato</Button></a>
             </div>
-            <img id="arrow"src="./assets/arrow.svg" alt="">
+            <a href="#tools" id="totools" onclick="ScrollBt(this.id)" class=""><img id="arrow"src="./assets/arrow.svg" alt=""></a>
         </section>
         <section id="tools">
-            <h1>tools</h1>
+            <!-- <h1>tools</h1> -->
+            <div id="toolsList">
+                <div class="html 5">
+                    <img src="./assets/tools/html-5 1.svg" alt="">
+                    <h3>HTML</h3>
+                </div>
+                <div class="css 3">
+                    <img src="./assets/tools/css-3 1.svg" alt="">
+                    <h3>CSS</h3>
+                </div>
+                <div class="typescript">
+                    <img src="./assets/tools/typescript 1.svg" alt="">
+                    <h3>TYPESCRIPT</h3>
+                </div>
+                <div class="javascript">
+                    <img src="./assets/tools/js 1.svg" alt="">
+                    <h3>JAVASCRIPT</h3>
+                </div>
+                <div class="react">
+                    <img src="./assets/tools/react 1.svg" alt="">
+                    <h3>REACT</h3>
+                </div>
+            </div>
+            <a href="#projects" id="toprojects" onclick="ScrollBt(this.id)" class=""><img id="arrow"src="./assets/arrow.svg" alt=""></a>
         </section>
 
         <section id="projects">
             <h1>projects</h1>
+            <a href="#contact" id="tocontact" onclick="ScrollBt(this.id)" class=""><img id="arrow"src="./assets/arrow.svg" alt=""></a>
         </section>
 
         <section id="contact">
