--- a/index.html
+++ b/index.html
@@ -27,18 +27,26 @@
 
     <main>
         <section id="home" onmouseover="sectionHover(this.id)">
-            <div class="Profile">
-                <img src="https://github.com/ViniOliver01.png" alt="">
-                <div class="ProfileInfo">
-                    <h2>Vinicius Oliveira</h2>
-                    <h3>Full-Stack Developer</h3>
-                    <h4>Iperó - SP</h4>
+            <div class="content">
+                <div class="Profile">
+                    <img src="https://github.com/ViniOliver01.png" alt="">
+                    <div class="ProfileInfo">
+                        <h2>Vinicius Oliveira</h2>
+                        <h3>Full-Stack Developer</h3>
+                        <h4>Iperó - SP</h4>
+                    </div>
+                </div>
+                <h1>Código para vida</h1>
+                <div class="buttons">
+                    <a href="#projects" id="goprojects" onclick="ScrollBt(this.id)"><Button >Confira meus projetos</Button></a>
+                    <a href="#contact" id="gocontact" onclick="ScrollBt(this.id)"><Button >Entre em contato</Button></a>
                 </div>
             </div>
-            <h1>Código para vida</h1>
-            <div class="buttons">
-                <a href="#projects" id="goprojects" onclick="ScrollBt(this.id)"><Button >Confira meus projetos</Button></a>
-                <a href="#contact" id="gocontact" onclick="ScrollBt(this.id)"><Button >Entre em contato</Button></a>
+            
+
+            <div class="arrowDiv">
+                <a href="#tools" id="gotools" onclick="ScrollBt(this.id)"><img id="arrow" src="./assets/arrow.svg" alt=""></a>
+                
             </div>
         </section>
 
