--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section id="tools" onmouseover="sectionHover(this.id)">
-            <h1>Tools</h1>
+            <h1>TOOLS</h1>
             <div id="toolsList">
                 <div class="html 5">
                     <img src="./assets/tools/html-5 1.svg" alt="">
@@ -77,7 +77,7 @@
         </section>
 
         <section id="projects" onmouseover="sectionHover(this.id)">
-            <h1>projects</h1>
+            <h1>PROJECTS</h1>
             <div class="projectsList">
 
                 <div class="projectCard">
@@ -164,7 +164,7 @@
         </section>
 
         <section id="contact" onmouseover="sectionHover(this.id)">
-            <h1>contact</h1>
+            <h1>CONTACT</h1>
         </section>
         
     </main>
