added description to projects

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                     <img src="./assets/projectsImages/react-timer.png" alt="">
                     <div class="projectContent">
                         <h2>Pomodoro <span>[Em desenvolvimento]</span></h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit tempora cumque eveniet aspernatur sit obcaecati dolorem error provident facere rem esse commodi</p>
-                        <!-- <span>.</span> -->
+                        <p>Um Web App SPA (single page aplication) com um relógio regressivo com tempo definido de acordo pelo usuario e registro de histórico de tarefas</p>
                         <div class="progaminlanguage">
                             <p>Programming Language:</p>
                             <div>
@@ -95,8 +94,7 @@
                     <img src="./assets/projectsImages/Todo.png" alt="">
                     <div class="projectContent">
                         <h2>To-Do List</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit tempora cumque eveniet aspernatur sit obcaecati dolorem error provident facere rem esse commodi</p>
-                        <!-- <span>.</span> -->
+                        <p>Este é um projeto de lista de tarefas ao estilo To-do com o intuito de por em pratica os ensinamentos de React ao decorrer do curso da Rocketseat</p>
                         <div class="progaminlanguage">
                             <p>Programming Language:</p>
                             <div>
@@ -114,8 +112,7 @@
                     <img src="./assets/projectsImages/data-time.png" alt="">
                     <div class="projectContent">
                         <h2>DataTime</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit tempora cumque eveniet aspernatur sit obcaecati dolorem error provident facere rem esse commodi</p>
-                        <!-- <span>.</span> -->
+                        <p>Um relógio feito em HTML, CSS e Javascript com o intuito de treinar a manipulação da DOM via Javascript</p>
                         <div class="progaminlanguage">
                             <p>Programming Language:</p>
                             <div>
@@ -131,9 +128,8 @@
                 <a href="https://github.com/ViniOliver01/Semana.Explorer_Rocketseat" target="_blank"><div class="projectCard">
                     <img src="./assets/projectsImages/semana-explorer.png" alt="">
                     <div class="projectContent">
-                        <h2>Lorem ipsum</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit tempora cumque eveniet aspernatur sit obcaecati dolorem error provident facere rem esse commodi</p>
-                        <!-- <span>.</span> -->
+                        <h2>Bola de Cristal</h2>
+                        <p>Meu primeiro contato com HTML, CSS e JavaScript onde desenvolvi uma pagina a qual se inseria um texto e se obtia uma resposta randomica</p>
                         <div class="progaminlanguage">
                             <p>Programming Language:</p>
                             <div>
