add project Coffee delivery

--- a/index.html
+++ b/index.html
@@ -72,10 +72,28 @@
             <h1>PROJECTS</h1>
             <div class="projectsList">
 
+                <a href="https://github.com/ViniOliver01/Coffee-Delivery" target="_blank"><div class="projectCard">
+                    <img src="./assets/projectsImages/Coffee-Delivery.png" alt="">
+                    <div class="projectContent">
+                        <h2>Coffee Delivery <span></span></h2>
+                        <p>Esté é um projeto ao estilo e-commerce com a utilização da Context API do React, passando informações de tipo de café e quantidade entre as paginas Home e Checkout</p>
+                        <div class="progaminlanguage">
+                            <p>Programming Language:</p>
+                            <div>
+                                <img src="./assets/tools/html.svg" alt="">
+                                <img src="./assets/tools/css.svg" alt="">
+                                <img src="./assets/tools/typescript.svg" alt="">
+                                <img src="./assets/tools/react.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div></a>
+
                 <a href="https://github.com/ViniOliver01/Timer" target="_blank"><div class="projectCard">
                     <img src="./assets/projectsImages/react-timer.png" alt="">
                     <div class="projectContent">
-                        <h2>Pomodoro <span>[Em desenvolvimento]</span></h2>
+                        <h2>Pomodoro <span></span></h2>
                         <p>Um Web App SPA (single page aplication) com um relógio regressivo com tempo definido de acordo pelo usuario e registro de histórico de tarefas</p>
                         <div class="progaminlanguage">
                             <p>Programming Language:</p>
